prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/delete_base.diag.txt
ERROR: can't delete 'base'
testData/diagnostics/delete_base.nut:1:0

delete base
^----------


